--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@
 
 body {
 	background: url(../images/background.jpg) no-repeat;
-	/*background-color: #575757;*/
 	background-size: cover;
 	-moz-background-size: cover;
 	-webkit-background-size: cover;
@@ -13,11 +12,9 @@ body {
 	background-attachment: fixed;
 	font-family: Ubuntu, sans-serif;
 }
-#master { 
-
-}
 header {
-	padding: 200px 0;
+	padding-top: 200px;
+	height: 450px;
 }
 header h1 {
 	line-height: 80px;
@@ -39,16 +36,22 @@ nav ul li {
 	line-height: 62px;
 	padding: 0 5px;
 	margin: 0 5px;
-	border: 2px solid #D81736;
-	background: rgba(0,0,0,0.2);
-	transition: background-color 0.414141s linear;
+	border: 2px solid #DF4A4A;
+	background: rgba(0,0,0,0.5);
+	transition: background-color 0.3s linear;
+}
+nav ul li.highlight {
+	background-color: #F96060;
+}
+nav ul li.highlight a {
+	color: #FFF;
 }
 nav ul li:hover {
 	background-color: rgba(255, 0, 0, 0.34);
 }
 nav ul li a {
 	display: block;
-	color: #E56D81;
+	color: #DF4A4A;
 	font-size: 26px;
 	text-decoration: none;
 	padding: 0 10px;
@@ -75,25 +78,38 @@ nav.fixed ul li a {
 
 section {
 	min-height: 600px;
-	padding: 0 15px;
-	background-color: #F1F8F9;
+	padding: 0;
+	background-color: #FEFAFA;
+	box-shadow: 0 -1px 10px #000, 0 1px 10px #000;
+}
+article {
+	/*just for debugging*/
+	min-height: 400px;
+	/*background-color: #ddd;*/
+	/**/
+	max-width: 950px;
+	margin: 0 auto;
+	padding: 100px 15px 0;
 }
 
+footer {
+	background: url(../images/classy-fabric.png);
+	background-color: rgba(0,0,0,0.5);
+}
 footer .menu {
-	background-color: #fff;
 	padding: 30px;
 }
 footer .menu ul.social li.description {
 	display: block;
 	font-size: 32px;
-	color: #333;
+	color: #eee;
 	line-height: 50px;
 	padding-bottom: 15px;
 }
 footer .menu ul.social {
 	list-style-type: none;
 	text-align: center;
-	border: 1px dashed #B2B2B2;
+	border: 1px dashed #CCC;
 	margin: 0 auto;
 	padding: 25px 0px;
 	width: 500px;
@@ -111,7 +127,7 @@ footer .menu ul.social a {
 	display: block;
 	border-radius: 5px;
 	border: 2px solid;
-	background-color: #fff;
+	background-color: #eee;
 }
 footer .menu ul.social li.facebook a {
 	color: #728ab8;
@@ -119,8 +135,8 @@ footer .menu ul.social li.facebook a {
 }
 footer .menu ul.social li.facebook a:hover {
 	background-color: #728ab8;
-	color: #fff;
-	border-color: #fff;
+	color: #eee;
+	border-color: #eee;
 }
 footer .menu ul.social li.gplus a {
 	color: #dd4b39;
@@ -128,8 +144,8 @@ footer .menu ul.social li.gplus a {
 }
 footer .menu ul.social li.gplus a:hover {
 	background-color: #dd4b39;
-	color: #fff;
-	border-color: #fff;
+	color: #eee;
+	border-color: #eee;
 }
 footer .menu ul.social li.twitter a {
 	color: #49bce7;
@@ -137,16 +153,16 @@ footer .menu ul.social li.twitter a {
 }
 footer .menu ul.social li.twitter a:hover {
 	background-color: #49bce7;
-	color: #fff;
-	border-color: #fff;
+	color: #eee;
+	border-color: #eee;
 }
 footer .menu ul.social a:hover {
 	transition: background-color 0.414141s linear;
 }
 footer .copyright {
-	background-color: #222;
+	background-color: rgba(0,0,0,0.7);
 	color: #ddd;
-	line-height: 24px;
+	line-height: 32px;
 	font-size: 14px;
 	text-align: center;
 }
