--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,10 @@ article {
 	padding: 100px 15px 0;
 }
 
+#image_gallery_wrapper {
+	padding-top: 30px;
+}
+
 footer {
 	background-size: cover;
 	-moz-background-size: cover;
