Corrected the social bg color of fb and linkedin

--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ footer .menu ul.social li.facebook a {
 	border-color: #728ab8;
 }
 footer .menu ul.social li.facebook a:hover {
-	background-color: #728ab8;
+	background-color: #44619d;
 	color: #eee;
 	border-color: #eee;
 }
@@ -188,7 +188,7 @@ footer .menu ul.social li.linkedin a {
 	border-color: #728ab8;
 }
 footer .menu ul.social li.linkedin a:hover {
-	background-color: #728ab8;
+	background-color: #1b86bc;
 	color: #eee;
 	border-color: #eee;
 }
