Corrected the border color of fb and linkedin buttons

--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ footer .menu ul.social a {
 }
 footer .menu ul.social li.facebook a {
 	color: #728ab8;
-	border-color: #728ab8;
+	border-color: #44619d;
 }
 footer .menu ul.social li.facebook a:hover {
 	background-color: #44619d;
@@ -185,7 +185,7 @@ footer .menu ul.social li.twitter a:hover {
 }
 footer .menu ul.social li.linkedin a {
 	color: #728ab8;
-	border-color: #728ab8;
+	border-color: #1b86bc;
 }
 footer .menu ul.social li.linkedin a:hover {
 	background-color: #1b86bc;
