--- a/css/main.css
+++ b/css/main.css
@@ -96,10 +96,8 @@ nav.fixed ul li a {
 }
 
 section {
-	min-height: 600px;
 	padding: 0;
 	background-color: #FEFAFA;
-	box-shadow: 0 -1px 10px #000, 0 1px 10px #000;
 }
 article {
 	min-height: 400px;
@@ -108,9 +106,10 @@ article {
 	margin: 0 auto;
 	padding: 100px 15px 0;
 }
-
-article #image_gallery_wrapper {
-	margin-top: 30px;
+.lSSlideOuter {
+	padding: 5px;
+	box-shadow: 0px 2px 5px #000;
+	margin-bottom: 10px;
 }
 
 footer {
