--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,17 @@
 }
 
 body {
-	font-family: Ubuntu, sans-serif;
 	background-color: #ccc;
+}
+body, p {
+	font-family: Ubuntu, sans-serif;
+	font-size: 18px;
+	color: #333;
+	text-shadow: 0px 1px 1px rgba(255,255,255,0.5);
+}
+p {
+	margin: 8px 0;
+	line-height: 21px;
 }
 /* mobile-first default background for Header and Footer */
 header, footer {
@@ -98,18 +107,62 @@ nav.fixed ul li a {
 section {
 	padding: 0;
 	background-color: #FEFAFA;
+	box-shadow: 0px -5px 16px #333;
 }
 article {
 	min-height: 400px;
-	max-width: 950px;
+	max-width: 1150px;
 	overflow: hidden;
 	margin: 0 auto;
-	padding: 100px 15px 0;
+	padding: 78px 30px 0;
+}
+article h2 {
+	line-height: 92px;
+	font-size: 42px;
+	color: #222;
+}
+article p:first-child:first-letter {
+	float: left;
+	color: #903;
+	font-size: 75px;
+	line-height: 57px;
+	padding-right: 6px;
+	padding-left: 3px;
+	font-family: Georgia, sans-serif;
+}
+article#about {
+	background: url('../images/about/about.jpg') no-repeat;
+	background-position: 0 170px;
+}
+article#about h2 {
+	margin-bottom: 460px;
+}
+.multi_column {
+	float: left;
+	width: 33%;
+	text-align: justify;
+}
+article .multi_column p {
+	padding-left: 30px;
+}
+article div:first-of-type p {
+	padding-left: 0;
+	padding-right: 10px;
 }
 .lSSlideOuter {
 	padding: 5px;
-	box-shadow: 0px 2px 5px #000;
+	box-shadow: 11px 0px 20px -10px #999, -11px 0px 20px -10px #999;
 	margin-bottom: 10px;
+	background-color: #eee;
+}
+.lSSlideOuter img {
+	cursor: pointer;
+}
+.lSSlideOuter .lSPager.lSGallery img {
+	display: inline;
+}
+.lSSlideOuter .lightSlider > *, .lSSlideOuter .lSGallery li {
+	text-align: center;
 }
 
 footer {
