--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
 }
 body, p {
 	font-family: Ubuntu, sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	color: #333;
 	text-shadow: 0px 1px 1px rgba(255,255,255,0.5);
 }
@@ -124,10 +124,9 @@ article h2 {
 article p:first-child:first-letter {
 	float: left;
 	color: #903;
-	font-size: 75px;
-	line-height: 57px;
+	font-size: 62px;
 	padding-right: 6px;
-	padding-left: 3px;
+	padding-top: 5px;
 	font-family: Georgia, sans-serif;
 }
 article#about {
@@ -135,7 +134,7 @@ article#about {
 	background-position: 0 170px;
 }
 article#about h2 {
-	margin-bottom: 460px;
+	margin-bottom: 510px;
 }
 .multi_column {
 	float: left;
