--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,9 @@ article div:first-of-type p {
 .lSSlideOuter .lightSlider > *, .lSSlideOuter .lSGallery li {
 	text-align: center;
 }
-
+article#contact {
+	height: 630px;
+}
 /* Start of contact form */
 article div#form-main{
 	width:100%;
@@ -203,7 +205,7 @@ article div div#form-div {
 .feedback-input:focus{
 	background: #fff;
 	box-shadow: 0;
-	border: 3px solid #3498db;
+	border: 3px solid #df4a4a;
 	color: #3498db;
 	outline: none;
   	padding: 13px 13px 13px 54px;
@@ -213,81 +215,44 @@ article div div#form-div {
 	border:#30aed6 solid 3px;
 }
 /* Icons ---------------------------------- */
-#name{
-	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
-	background-size: 30px 30px;
-	background-position: 11px 8px;
-	background-repeat: no-repeat;
+.contact-icon {
+	position: absolute;
+	padding: 9px 0 10px 15px;
 }
-
-#name:focus{
-	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
-	background-size: 30px 30px;
-	background-position: 8px 5px;
-  	background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
-#email{
-	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
-	background-size: 30px 30px;
-	background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
-#email:focus{
-	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
-	background-size: 30px 30px;
-  	background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
-#comment{
-	background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
-	background-size: 30px 30px;
-	background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
 textarea {
     width: 100%;
     height: 150px;
     line-height: 150%;
     resize:vertical;
 }
-
 input:hover, textarea:hover,
 input:focus, textarea:focus {
 	background-color:white;
 }
-
 #button-blue{
 	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 	float:left;
-	width: 100%;
+	width: 98%;
 	border: #fbfbfb solid 4px;
 	cursor:pointer;
 	background-color: #3498db;
-	color:white;
+	color:#fff;
 	font-size:24px;
 	padding-top:22px;
 	padding-bottom:22px;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
-	  margin-top:-4px;
-	  font-weight:700;
+	margin-top:-4px;
+	font-weight:700;
 }
-
 #button-blue:hover{
 	background-color: rgba(0,0,0,0);
-	color: #0493bd;
+	color: #fff;
 }
-	
 .submit:hover {
 	color: #3498db;
 }
-	
 .ease {
 	width: 0px;
 	height: 74px;
@@ -298,12 +263,10 @@ input:focus, textarea:focus {
 	-ms-transition: .3s ease;
 	transition: .3s ease;
 }
-
 .submit:hover .ease{
-  width:100%;
-  background-color:white;
+  	width:98%;
+  	background-color:#df4a4a;
 }
-
 @media only screen and (max-width: 580px) {
 	#form-div{
 		left: 3%;
@@ -314,8 +277,10 @@ input:focus, textarea:focus {
 		padding-right: 3%;
 	}
 }
+#comment {
+	resize:none;
+}
 /* End of contact form*/
-
 footer {
 	background-size: cover;
 	-moz-background-size: cover;
