--- a/css/main.css
+++ b/css/main.css
@@ -164,123 +164,84 @@ article div:first-of-type p {
 .lSSlideOuter .lightSlider > *, .lSSlideOuter .lSGallery li {
 	text-align: center;
 }
-article#contact {
-	height: 630px;
-}
+
 /* Start of contact form */
-article div#form-main{
-	width:100%;
-	float:left;
-	padding-top:0px;
-}
-article div div#form-div {
-	background-color:rgba(72,72,72,0.4);
-	padding: 35px 35px 50px 35px;
+#contact-container {
 	width: 450px;
-	float: left;
-	left: 50%;
+	margin: auto;
+	margin-bottom: 25px;
+	padding-top: 30px;
+	background-color: #5c5c5c;
+	border-radius: 10px;
+	text-align: center;
+	box-shadow: 8px -8px 5px #ccc;
+}
+.contact-input {
+	width: 70%;
+	font-size: 1.2em;
+	padding: 10px 10px 10px 54px;
+	margin-bottom: 20px;
+	font-family: Ubuntu, sans-serif;
+	border: 4px solid #5c5c5c;
+	border-radius: 5px;
+}
+#contact-icon-user, #contact-icon-mail, #contact-icon-pencil {
 	position: absolute;
-  	margin-top:30px;
-	margin-left: -260px;
-  	-moz-border-radius: 7px;
- 	-webkit-border-radius: 7px;
+	padding: 8px 0 0 15px;
 }
-.feedback-input {
-	color:#3c3c3c;
-	font-family: Helvetica, Arial, sans-serif;
-  	font-weight:500;
-	font-size: 18px;
-	border-radius: 0;
-	line-height: 22px;
-	background-color: #fbfbfb;
-	padding: 13px 13px 13px 54px;
-	margin-bottom: 10px;
-	width:100%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	box-sizing: border-box;
-  	border: 3px solid rgba(0,0,0,0);
+#contact-icon-mail {
+	padding: 8px 0 0 12px; /* For best align */
 }
-.feedback-input:focus{
-	background: #fff;
-	box-shadow: 0;
-	border: 3px solid #df4a4a;
-	color: #3498db;
+#contact-comment {
+	height: 250px;
+	resize: none;
+}
+#contact-name:hover, #contact-email:hover, #contact-comment:hover {
+	border: 4px solid #5be;
+}
+#contact-name:focus, #contact-email:focus, #contact-comment:focus {
+	border: 4px solid #17b;
 	outline: none;
-  	padding: 13px 13px 13px 54px;
 }
-.focused{
-	color:#30aed6;
-	border:#30aed6 solid 3px;
+#contact-button-bottom {
+	height: 20px;
 }
-/* Icons ---------------------------------- */
-.contact-icon {
-	position: absolute;
-	padding: 9px 0 10px 15px;
+#contact-button {
+	margin: auto;
+	width: 30%;
 }
-textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
-    resize:vertical;
-}
-input:hover, textarea:hover,
-input:focus, textarea:focus {
-	background-color:white;
-}
-#button-blue{
-	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-	float:left;
-	width: 98%;
-	border: #fbfbfb solid 4px;
+#contact-send {
+	float: left;
+	width: 100%;
+	padding: 10px 0 10px 0;
+	background-color: #5be;
 	cursor:pointer;
-	background-color: #3498db;
-	color:#fff;
-	font-size:24px;
-	padding-top:22px;
-	padding-bottom:22px;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
-	margin-top:-4px;
-	font-weight:700;
+	font-size: 1.3em;
+	border: 3px solid #fff;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	transition: all 0.5s;
 }
-#button-blue:hover{
+#contact-send:hover {
 	background-color: rgba(0,0,0,0);
 	color: #fff;
 }
-.submit:hover {
-	color: #3498db;
-}
-.ease {
+#ease {
 	width: 0px;
-	height: 74px;
+	height: 50px;
 	background-color: #fbfbfb;
-	-webkit-transition: .3s ease;
-	-moz-transition: .3s ease;
-	-o-transition: .3s ease;
-	-ms-transition: .3s ease;
-	transition: .3s ease;
+	-webkit-transition: .5s ease;
+	-moz-transition: .5s ease;
+	-o-transition: .5s ease;
+	-ms-transition: .5s ease;
+	transition: .5s ease;
 }
-.submit:hover .ease{
-  	width:98%;
-  	background-color:#df4a4a;
+#contact-button:hover #ease{
+  	width:100%;
+  	background-color:#17b;
 }
-@media only screen and (max-width: 580px) {
-	#form-div{
-		left: 3%;
-		margin-right: 3%;
-		width: 88%;
-		margin-left: 0;
-		padding-left: 3%;
-		padding-right: 3%;
-	}
-}
-#comment {
-	resize:none;
-}
-/* End of contact form*/
+/* End of contact form */
+
 footer {
 	background-size: cover;
 	-moz-background-size: cover;
