--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body, p {
 	text-shadow: 0px 1px 1px rgba(255,255,255,0.5);
 }
 p {
-	margin: 8px 0;
+	padding: 8px 0;
 	line-height: 21px;
 }
 /* mobile-first default background for Header and Footer */
@@ -149,7 +149,7 @@ article div:first-of-type p {
 	padding-left: 0;
 	padding-right: 10px;
 }
-.lSSlideOuter {
+.lSSlideOuter, .frame {
 	padding: 5px;
 	box-shadow: 11px 0px 20px -10px #999, -11px 0px 20px -10px #999;
 	margin-bottom: 10px;
@@ -167,22 +167,17 @@ article div:first-of-type p {
 
 /* Start of contact form */
 #contact-container {
-	width: 450px;
-	margin: auto;
 	margin-bottom: 25px;
 	padding-top: 30px;
-	background-color: #5c5c5c;
-	border-radius: 10px;
 	text-align: center;
-	box-shadow: 8px -8px 5px #ccc;
 }
 .contact-input {
 	width: 70%;
 	font-size: 1.2em;
 	padding: 10px 10px 10px 54px;
 	margin-bottom: 20px;
-	font-family: Ubuntu, sans-serif;
-	border: 4px solid #5c5c5c;
+	font-family: 'Ubuntu', sans-serif;
+	border: 3px solid #5c5c5c;
 	border-radius: 5px;
 }
 #contact-icon-user, #contact-icon-mail, #contact-icon-pencil {
@@ -197,10 +192,11 @@ article div:first-of-type p {
 	resize: none;
 }
 #contact-name:hover, #contact-email:hover, #contact-comment:hover {
-	border: 4px solid #5be;
+	border: 3px solid #DF4A4A;
 }
 #contact-name:focus, #contact-email:focus, #contact-comment:focus {
-	border: 4px solid #17b;
+	border: 3px solid #DF4A4A;
+	background-color: #F5E6E6;
 	outline: none;
 }
 #homer {
@@ -215,34 +211,21 @@ article div:first-of-type p {
 	width: 30%;
 }
 #contact-send {
-	float: left;
 	width: 100%;
-	padding: 10px 0 10px 0;
-	background-color: #5be;
-	cursor:pointer;
+	padding: 10px 0;
+	background-color: #323232;
+	color: #DF4A4A;
+	cursor: pointer;
 	font-size: 1.3em;
-	border: 3px solid #fff;
+	border: 2px solid #DF4A4A;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 	transition: all 0.5s;
 }
 #contact-send:hover {
-	background-color: rgba(0,0,0,0);
-	color: #fff;
-}
-#ease {
-	width: 0px;
-	height: 50px;
-	background-color: #fbfbfb;
-	-webkit-transition: .5s ease;
-	-moz-transition: .5s ease;
-	-o-transition: .5s ease;
-	-ms-transition: .5s ease;
-	transition: .5s ease;
-}
-#contact-button:hover #ease{
-  	width:100%;
-  	background-color:#17b;
+	background-color: #711919;
+	border-color: #DF4A4A;
+	color: #ddd;
 }
 /* End of contact form */
 
@@ -329,9 +312,11 @@ footer .menu ul.social a:hover {
 	transition: background-color 0.414141s linear;
 }
 footer .copyright {
-	background-color: rgba(0,0,0,0.7);
-	color: #ddd;
+	background-color: rgba(0,0,0,0.8);
 	line-height: 32px;
 	font-size: 14px;
 	text-align: center;
+}
+footer .copyright p {
+	color: #C59696;
 }
