--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ nav ul li.highlight a {
 nav ul li:hover {
 	background-color: rgba(255, 0, 0, 0.34);
 }
-nav ul li a {
+nav ul li a, nav ul li a:hover, nav ul li a:focus {
 	display: block;
 	color: #DF4A4A;
 	font-size: 24px;
@@ -131,7 +131,7 @@ section {
 }
 article {
 	min-height: 400px;
-	max-width: 1150px;
+	max-width: 1200px;
 	overflow: hidden;
 	margin: 0 auto;
 	padding: 78px 30px 0;
@@ -151,7 +151,22 @@ article p:first-child:first-letter {
 }
 article#about {
 	background: url('../images/about/about.jpg') no-repeat;
-	background-position: 0 170px;
+	background-position: -130px 170px;
+}
+@media only screen and (min-width:600px) {
+	article#about {
+		background-position: -25px 170px;
+	}
+}
+@media only screen and (min-width:1170px) {
+	article#about {
+		background-position: -15px 170px;
+	}
+}
+@media only screen and (min-width:1200px) {
+	article#about {
+		background-position: 0 170px;
+	}
 }
 article#about h2 {
 	margin-bottom: 510px;
