--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,27 @@ header, footer {
 	}
 }
 
+/********* pop-up notification *********/
+
+.popup_div {
+  position: fixed;
+  width: 50%;
+  left: 50%;
+  margin-left: -25%;
+  top: 50%;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 0 100px 10px #000;
+  z-index: 999;
+  margin-top: -65px;
+}
+.popup_div.error {
+  background: #E85252;
+}
+.popup_div.sent {
+  background: #99EA71;
+}
+
 /********* header *********/
 
 header {
