--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
 	background-color: #ccc;
 }
 body, p, li {
-	font-family: Ubuntu, sans-serif;
+	font-family: Lato, sans-serif;
 	font-size: 15px;
 	color: #333;
 	text-shadow: 0px 1px 1px rgba(255,255,255,0.5);
@@ -294,7 +294,7 @@ article div:first-of-type p {
 	font-size: 1.2em;
 	padding: 10px 10px 10px 54px;
 	margin-bottom: 20px;
-	font-family: 'Ubuntu', sans-serif;
+	font-family: Lato, sans-serif;
 	border: 3px solid #5c5c5c;
 	border-radius: 5px;
 }
